# bitcoin-ffi

./: Cargo.toml  build.rs  uniffi.toml
.github/workflows/: build.yml
src/: bitcoin_ffi.udl  lib.rs
