[package]
name = "bitcoin-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
uniffi = { version = "0.23.0", features = ["build"] }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build", "cli"] }
